--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      MENSAJE 1
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,78 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">MENSAJE 1</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
+
+  <ion-button id="present-alert">Click Me</ion-button>
+  <ion-alert trigger="present-alert" header="            BIENVENIDO...!!" sub-header=".............................."
+    message="😎😎😎😎😎😎😎😎😎"></ion-alert>
+
+  <script>
+    const alert = document.querySelector('ion-alert');
+    alert.buttons = ['Action'];
+  </script>
+
+  <div class="wrapper">
+    <b>Mira el color</b>
+
+    <div class="ion-activatable ripple-parent custom-parent">
+      Rosado
+      <ion-ripple-effect></ion-ripple-effect>
+    </div>
+
+    <div class="ion-activatable ripple-parent">
+      Morado
+      <ion-ripple-effect class="custom-ripple"></ion-ripple-effect>
+    </div>
+  </div>
+
+  <style>
+    .wrapper {
+      display: flex;
+      flex-wrap: wrap;
+
+      align-items: center;
+      justify-content: space-between;
+      text-align: center;
+
+      height: 170px;
+      width: 400px;
+
+      margin: 0 auto;
+    }
+
+    b {
+      width: 100%;
+    }
+
+    .ripple-parent {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      position: relative;
+      overflow: hidden;
+
+      border: 1px solid #ddd;
+
+      user-select: none;
+
+      width: 100%;
+      height: 50px;
+      border-radius: 8px;
+    }
+
+    .custom-parent {
+      color: #de1e7e;
+    }
+
+    .custom-ripple {
+      color: #501ace;
+    }
+  </style>
+
 </ion-content>
