--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,86 +1,205 @@
+<ion-menu side="start" contentId="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menú</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <ion-item (click)="scrollToSection('Perfil')">Inicio</ion-item>
+    <ion-item (click)="scrollToSection('Sobre_mi')">Sobre mí</ion-item>
+    <ion-item (click)="scrollToSection('Estudios')">Estudios</ion-item>
+    <ion-item (click)="scrollToSection('Experiencia')">Experiencia</ion-item>
+  </ion-content>
+</ion-menu>
+
+
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
+</div>
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      MENSAJE 1
-    </ion-title>
+    <ion-buttons slot="start">
+      <ion-button color=primary (click)="onClick()">
+        <ion-icon slot="start" name="menu"></ion-icon>
+        Menú
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">MENSAJE 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!-- Sección principal de perfil -->
+  <ion-card id="Perfil">
+    <ion-card-content id="perfil">
+      <ion-img src="https://res.cloudinary.com/dh7xuwoyg/image/upload/v1700979498/perfil/FOTO_nzrlhw.png"
+        alt="Perfil"></ion-img>
+      <div class="perfil_content">
+        <ion-card-title>DILAN ALEXANDER FLORES QUIMBIA</ion-card-title>
+        <ion-card-subtitle>Técnico de Servicio Aplicaciones Informáticas</ion-card-subtitle>
+      </div>
+    </ion-card-content>
+  </ion-card>
+  <!-- Sección de contacto -->
+  <ion-card id="datos">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-item class="celular">
+            <ion-icon name="call"></ion-icon>
+            <ion-label>0985436487</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item class="ubicacion">
+            <ion-icon name="location"></ion-icon>
+            <ion-label>Malchinguí-Ecuador</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item class="cedula">
+            <ion-icon name="card"></ion-icon>
+            <ion-label>1727936070</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item class="icono_l">
+            <ion-icon name="logo-linkedin"></ion-icon>
+            <ion-label>Dilan Flores</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item class="correo">
+            <ion-icon name="mail"></ion-icon>
+            <ion-label>dilanflores.21&#64;gmail.com</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item class="icono_g">
+            <ion-icon name="logo-github"></ion-icon>
+            <ion-label>dilan-flores</ion-label>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 
-  <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
+  <!-- Sección sobre mí -->
+  <ion-card class="hero" id="Sobre_mi">
+    <ion-card-content>
+      <ion-img src="https://res.cloudinary.com/dh7xuwoyg/image/upload/v1700979546/perfil/sobre_mi_uv9wpj.png"
+        alt="Perfil"></ion-img>
+      <div class="Sobre_mi-content">
+        <ion-card-title>SOBRE MI</ion-card-title>
+        <ion-card-subtitle>
+          Soy una persona tranquila y pienso detenidamente en mis ideas
+          y en lo ocurre a mi alrededor
+          Me gusta la idea de aprender y adquirir variedad de conocimientos
+          especialmente con temas de progamación:
+          sus distintos tipos de lenguajes y manejo de bases de datos.
+          Además la estructura interna y el proceso de funcionamiento de los dispositivos
+          electrónicos.
+        </ion-card-subtitle>
+      </div>
 
-  <ion-button id="present-alert">Click Me</ion-button>
-  <ion-alert trigger="present-alert" header="            BIENVENIDO...!!" sub-header=".............................."
-    message="😎😎😎😎😎😎😎😎😎"></ion-alert>
 
-  <script>
-    const alert = document.querySelector('ion-alert');
-    alert.buttons = ['Action'];
-  </script>
+    </ion-card-content>
+  </ion-card>
 
-  <div class="wrapper">
-    <b>Mira el color</b>
+  <!-- Sección de educación -->
+  <ion-card id="Estudios">
+    <ion-card-content>
+      <ion-card-title>ESTUDIOS</ion-card-title>
+      <ion-item>
+        <ion-label>
+          <h1>Formato académico</h1>
+          <p class="fecha">2020 - a la presente</p>
+          <h2>Tecnología Superior en Desarrollo de Software</h2>
+          <p>Escuela Politécnica Nacional</p>
+        </ion-label>
+      </ion-item>
 
-    <div class="ion-activatable ripple-parent custom-parent">
-      Rosado
-      <ion-ripple-effect></ion-ripple-effect>
-    </div>
+      <ion-item>
+        <ion-label>
+          <p class="fecha">Julio - 2019</p>
+          <h2>Técnico-De servicios Aplicaciones Informáticas</h2>
+          <p>Unidad Educativa Malchinguí</p>
+        </ion-label>
+      </ion-item>
 
-    <div class="ion-activatable ripple-parent">
-      Morado
-      <ion-ripple-effect class="custom-ripple"></ion-ripple-effect>
-    </div>
-  </div>
+      <ion-item>
+        <ion-label>
+          <br />
+          <h1>Idiomas</h1>
+          <h2>Español (Nativo)</h2>
+          <p class="fecha">Marzo - 2022</p>
+          <h2>Inglés (Intermedio 1)</h2>
+        </ion-label>
+      </ion-item>
 
-  <style>
-    .wrapper {
-      display: flex;
-      flex-wrap: wrap;
+    </ion-card-content>
+  </ion-card>
 
-      align-items: center;
-      justify-content: space-between;
-      text-align: center;
+  <!-- Sección de experiencia -->
+  <!-- ... otros elementos HTML ... -->
 
-      height: 170px;
-      width: 400px;
+  <ion-card id="Experiencia">
+    <ion-card-content class="Experiencia_content">
+      <ion-card-title id="">EXPERIENCIA</ion-card-title>
+      <p class="fecha">Febrero 2019 - Abril 2019</p>
+      <div class="Experiencia_content_part">
+        <ion-label>
+          <h2>Pasante Florsani | </h2>
+          <p>Malchinguí-EC</p>
+        </ion-label>
+      </div>
 
-      margin: 0 auto;
-    }
+      <ion-label>
+        - Revisión e instalación de antivirus, registro de IP en relación con el área<br />
+        trabajo de computadoras de toda la empresa.<br />
+        - Realización de informe con el nuevo listado.<br />
+        - Instalación de aplicación Basecamp en celulares o laptops de supervisores
+      </ion-label>
 
-    b {
-      width: 100%;
-    }
+      <!-- Añadir un <br/> si es necesario -->
+      <br /><br />
+      <p class="fecha">Abril 2023</p>
+      <div class="Experiencia_content_part">
+        <ion-label>
+          <h2>Convalidación Florsani | </h2>
+          <p>Malchinguí-EC</p>
+        </ion-label>
+      </div>
 
-    .ripple-parent {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      <ion-label>
+        - Mantenimiento de preventivo de computadoras, impresoras, biométricos.<br />
+        - Registro de mantenimiento.<br />
+        - Cambio de componentes como batería, discos duros.<br />
+        - Formateo de computadoras.<br />
+        - Instalación de software.<br />
+        - Revisión de funcionamiento de cámaras.<br />
+        - Verificación de servidores.
+      </ion-label>
 
-      position: relative;
-      overflow: hidden;
+      <!-- Añadir un <br/> si es necesario -->
+    </ion-card-content>
+  </ion-card>
 
-      border: 1px solid #ddd;
-
-      user-select: none;
-
-      width: 100%;
-      height: 50px;
-      border-radius: 8px;
-    }
-
-    .custom-parent {
-      color: #de1e7e;
-    }
-
-    .custom-ripple {
-      color: #501ace;
-    }
-  </style>
+  <ion-button (click)="presentAlert()">Ver</ion-button>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <p>
+      Todos los derechos reservados - Dilan Flores - &#169;
+    </p>
+  </ion-toolbar>
+</ion-footer>
